chore: Create Startpage

--- a/package.json
+++ b/package.json
@@ -12,17 +12,24 @@
   "dependencies": {
     "@emotion/react": "^11.7.1",
     "@emotion/styled": "^11.6.0",
-    "@startpage/preset": "^0.1.1",
+    "@headlessui/react": "^1.4.2",
+    "@startpage/bookmarks": "^0.1.2",
+    "@startpage/local-storage": "^0.1.2",
+    "@startpage/preset": "^0.1.3-alpha.0",
+    "@startpage/search": "^0.1.1",
     "@startpage/theming": "^0.1.2",
+    "color": "^4.1.0",
     "gh-pages": "^3.2.3",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-feather": "^2.0.9",
     "react-scripts": "5.0.0",
     "typescript": "^4.5.4",
     "web-vitals": "^2.1.2"
   },
   "devDependencies": {
     "@emotion/eslint-plugin": "^11.7.0",
+    "@types/color": "^3.0.2",
     "@types/node": "^17.0.0",
     "@types/react": "^17.0.37",
     "@types/react-dom": "^17.0.11",
