--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "yet-another-generic-startpage",
   "version": "0.1.0",
   "private": true,
+  "homepage": ".",
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
@@ -13,25 +14,22 @@
     "@emotion/react": "^11.7.1",
     "@emotion/styled": "^11.6.0",
     "@headlessui/react": "^1.4.2",
-    "@startpage/bookmarks": "^0.1.2",
-    "@startpage/local-storage": "^0.1.2",
-    "@startpage/preset": "^0.1.3-alpha.0",
-    "@startpage/search": "^0.1.1",
-    "@startpage/theming": "^0.1.2",
+    "@startpage/bookmarks": "^0.2.0",
+    "@startpage/local-storage": "^0.2.0",
+    "@startpage/preset": "^0.2.0",
+    "@startpage/search": "^0.2.0",
+    "@startpage/theming": "^0.2.0",
     "color": "^4.1.0",
-    "gh-pages": "^3.2.3",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-feather": "^2.0.9",
-    "react-scripts": "5.0.0",
-    "typescript": "^4.5.4",
-    "web-vitals": "^2.1.2"
+    "web-vitals": "^2.1.3"
   },
   "devDependencies": {
     "@emotion/eslint-plugin": "^11.7.0",
     "@types/color": "^3.0.2",
-    "@types/node": "^17.0.0",
-    "@types/react": "^17.0.37",
+    "@types/node": "^17.0.8",
+    "@types/react": "^17.0.38",
     "@types/react-dom": "^17.0.11",
     "eslint-config-prettier": "^8.3.0",
     "eslint-import-resolver-typescript": "^2.5.0",
@@ -39,7 +37,10 @@
     "eslint-plugin-prettier": "^4.0.0",
     "eslint-plugin-promise": "^6.0.0",
     "eslint-plugin-unused-imports": "^2.0.0",
-    "prettier": "^2.5.1"
+    "gh-pages": "^3.2.3",
+    "prettier": "^2.5.1",
+    "react-scripts": "5.0.0",
+    "typescript": "^4.5.4"
   },
   "browserslist": {
     "production": [
