--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "color": "^4.2.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-error-boundary": "^3.1.4",
     "react-feather": "^2.0.9",
     "web-vitals": "^2.1.3"
   },
