docs: Add readme and license

--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "yet-another-generic-startpage",
   "version": "0.1.0",
+  "license": "MIT",
   "private": true,
   "homepage": ".",
   "scripts": {
