--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "preview": "vite preview",
     "predeploy": "npm run build",
     "deploy": "gh-pages -d build",
-    "lint": "eslint ./src",
+    "lint": "eslint",
     "lint:fix": "npm run lint -- --fix"
   },
   "dependencies": {
@@ -32,22 +32,18 @@
   },
   "devDependencies": {
     "@emotion/eslint-plugin": "^11.12.0",
+    "@pretty-cozy/eslint-config": "^0.6.0",
     "@types/color": "^3.0.6",
     "@types/node": "^20.17.25",
     "@types/react": "^18.3.19",
     "@types/react-dom": "^18.3.5",
     "@vitejs/plugin-react": "^4.3.4",
-    "eslint": "^8.57.1",
-    "eslint-config-prettier": "^8.10.0",
-    "eslint-import-resolver-typescript": "^3.9.1",
-    "eslint-plugin-node": "^11.1.0",
-    "eslint-plugin-prettier": "^4.2.1",
-    "eslint-plugin-promise": "^6.6.0",
-    "eslint-plugin-unused-imports": "^2.0.0",
     "gh-pages": "^5.0.0",
-    "prettier": "^2.8.8",
     "typescript": "^5.8.2",
     "vite": "^6.2.2"
+  },
+  "overrides": {
+    "eslint": "^9"
   },
   "browserslist": {
     "production": [
